DNF automatic and refacto

--- a/defaults/main/hosts.yml
+++ b/defaults/main/hosts.yml
@@ -1,5 +1,5 @@
 ---
-system_hosts_domain: localdomain
-system_hosts_localhost: "{{ inventory_hostname }}"
-system_hosts_localhost_aliases: []
-system_hosts_custom: []
+system_domain: localdomain
+system_hostname: "{{ inventory_hostname }}"
+system_hostnames: []
+system_hosts: []
