--- a/molecule/servers/inventory/group_vars/all/hosts.yml
+++ b/molecule/servers/inventory/group_vars/all/hosts.yml
@@ -1,11 +1,11 @@
 ---
 system_manage_hosts: true
 
-system_hosts_domain: mydomain.tld
-system_hosts_localhost_aliases:
+system_domain: mydomain.tld
+system_hostnames:
   - me
   - myself
-system_hosts_custom:
+system_hosts:
   - ip: '10.0.0.7'
     names:
       - host7
