--- a/tasks/ca.yml
+++ b/tasks/ca.yml
@@ -1,6 +1,6 @@
 ---
 - name: CA - Load variables
-  when: system_ca is undefined
+  when: default_ca is undefined
   ansible.builtin.import_tasks: vars.yml
 
 - name: CA certificates
@@ -9,7 +9,7 @@
   become: true
   ansible.builtin.copy:
     src: "{{ system_ca_certificate }}"
-    dest: "{{ system_ca.path }}"
+    dest: "{{ default_ca.path }}"
     mode: 0644
   loop: "{{ system_ca_certificates }}"
   loop_control:
