--- a/tasks/hosts.yml
+++ b/tasks/hosts.yml
@@ -1,23 +1,9 @@
 ---
-- name: Hosts - Local host
+- name: Hosts - Local hostname
   become: true
   ansible.builtin.hostname:
-    name: "{{ system_hosts_localhost }}"
-  notify: restart logind
-
-- name: Hosts - Display custom hosts for debugging
-  ansible.builtin.debug:
-    var: system_hosts
-    verbosity: 1
-
-- name: Hosts - Names in /etc/hosts
-  become: true
-  ansible.builtin.lineinfile:
-    path: /etc/hosts
-    line: "{{ '{:<15}'.format(item.ip) }} {{ item.names | join(' ') }}"
-    regexp: "^{{ item.ip | regex_escape }}"
-  with_items: "{{ system_hosts }}"
-  notify: restart logind
+    name: "{{ system_hostname }}"
+  notify: restart hostname
 
 - name: Hosts - OpenRC configuration
   when: ansible_service_mgr == "openrc"
@@ -30,10 +16,30 @@
         state: absent
 
     - name: Hosts - OpenRC - Domain name
+      when: system_domain is defined
       ansible.builtin.lineinfile:
         path: /etc/conf.d/net
-        line: 'dns_domain_lo="{{ system_hosts_domain }}"'
+        line: 'dns_domain_lo="{{ system_domain }}"'
         regex: ^dns_domain_lo=
         create: true
         group: wheel
         mode: 0664
+
+- name: /etc/hosts
+  when: system_hosts | length > 0
+  block:
+    - name: Hosts - Display hosts for debugging
+      ansible.builtin.debug:
+        var: hosts
+        verbosity: 1
+
+    - name: Hosts - Names in /etc/hosts
+      become: true
+      ansible.builtin.lineinfile:
+        path: /etc/hosts
+        line: "{{ '{:<15}'.format(host.ip) }} {{ host.names | join(' ') }}"
+        regexp: "^{{ host.ip | regex_escape }}"
+      loop: "{{ hosts }}"
+      loop_control:
+        loop_var: host
+      notify: restart hostname
