--- a/vars/archlinux-like.yml
+++ b/vars/archlinux-like.yml
@@ -1,16 +1,16 @@
 ---
-system_ca:
+default_ca:
   path: /etc/ca-certificates/trust-source/anchors
   command: update-ca-trust
   bundle: /etc/ssl/cert.pem
 
-system_packages_update_policy:
+packages_update_policy:
   path: /var/lib/pacman/sync
 
-system_packages_upgrade_policy:
+packages_upgrade_policy:
   upgrade: true
 
-system_packages:
+packages:
   bridge: bridge-utils
   ca_certificates: ca-certificates
   chrony: chrony
@@ -20,7 +20,7 @@ system_packages:
     - usbutils
   ntp: ntp
 
-system_reboot_detection_policy:
+reboot_detection_policy:
   use_template: true
 
 default_time_backend: timesync
