--- a/vars/gentoo-like.yml
+++ b/vars/gentoo-like.yml
@@ -1,22 +1,26 @@
 ---
-system_ca:
+default_ca:
   path: /usr/local/share/ca-certificates
   command: update-ca-certificates
   bundle: /etc/ssl/certs/ca-certificates.crt
 
-system_packages_update_policy:
+packages_update_policy:
   marker: "{{ system_portage_directory }}/metadata/timestamp.chk"
 
-system_packages:
-  bridge: net-misc/bridge-utils
-  ca_certificates: app-misc/ca-certificates
-  chrony: net-misc/chrony
+packages:
+  bridge:
+    - net-misc/bridge-utils
+  ca_certificates:
+    - app-misc/ca-certificates
+  chrony:
+    - net-misc/chrony
   common:
     - dev-vcs/git
     - net-misc/rsync
   desktop:
     - sys-apps/usbutils
-  ntp: net-misc/ntp
+  ntp:
+    - net-misc/ntp
 
 system_portage_profile:
   desktop: default/linux/amd64/17.1/desktop
