--- a/molecule/servers/verify.yml
+++ b/molecule/servers/verify.yml
@@ -112,7 +112,7 @@
 
     - name: Get cert headers
       ansible.builtin.command:
-        cmd: "awk -v cmd='openssl x509 -noout -subject' '/BEGIN/{close(cmd)};{print | cmd}' {{ system_ca.bundle }}"
+        cmd: "awk -v cmd='openssl x509 -noout -subject' '/BEGIN/{close(cmd)};{print | cmd}' {{ default_ca.bundle }}"
       changed_when: false
       register: result
 
