--- a/tasks/networks.yml
+++ b/tasks/networks.yml
@@ -1,6 +1,6 @@
 ---
 - name: Networks - Load variables
-  when: system_networks_defaults is undefined
+  when: default_networks is undefined
   ansible.builtin.import_tasks: vars.yml
 
 - name: Networks - Prune unmanaged interfaces
@@ -18,7 +18,7 @@
         - networks
 
 - name: Networks - Interfaces configuration from template
-  when: system_networks_defaults.template is defined
+  when: default_networks.template is defined
   ansible.builtin.import_tasks: networks/from-template.yml
 
 - name: Networks - Restart to take effect
