--- a/tasks/networks/from-template.yml
+++ b/tasks/networks/from-template.yml
@@ -5,13 +5,13 @@
     - name: Networks - Interfaces configuration - Directory
       ansible.builtin.file:
         state: directory
-        path: "{{ system_networks_defaults.template.dest | dirname }}"
+        path: "{{ default_networks.template.dest | dirname }}"
         mode: 0755
 
     - name: Networks - Interfaces configuration - Files
       ansible.builtin.template:
-        src: "{{ system_networks_defaults.template.src }}"
-        dest: "{{ system_networks_defaults.template.dest | format(system_netiface.name) }}"
+        src: "{{ default_networks.template.src }}"
+        dest: "{{ default_networks.template.dest | format(system_netiface.name) }}"
         mode: 0644
       loop: "{{ system_networks_interfaces }}"
       loop_control:
