--- a/tasks/reboot.yml
+++ b/tasks/reboot.yml
@@ -1,23 +1,23 @@
 ---
 - name: Reboot - Load variables
-  when: system_reboot_detection_policy is undefined
+  when: reboot_detection_policy is undefined
   ansible.builtin.import_tasks: vars.yml
 
 - name: Reboot
   when:
     - "'container' not in ansible_virtualization_tech_guest"
-    - system_reboot_detection_policy is defined
+    - reboot_detection_policy is defined
   block:
     - name: Reboot - Package providing the command that determine if a restart is needed
-      when: system_reboot_detection_policy.package is defined
+      when: reboot_detection_policy.package is defined
       become: true
       ansible.builtin.package:
-        name: "{{ system_reboot_detection_policy.package }}"
+        name: "{{ reboot_detection_policy.package }}"
 
     - name: Reboot - Determination script
       when:
-        - system_reboot_detection_policy.use_template is defined
-        - system_reboot_detection_policy.use_template
+        - reboot_detection_policy.use_template is defined
+        - reboot_detection_policy.use_template
       become: true
       ansible.builtin.template:
         src: needs-restarting.j2
@@ -26,7 +26,7 @@
 
     - name: Reboot - Check if it's needed
       ansible.builtin.command:
-        cmd: "{{ system_reboot_detection_policy.cmd | default('needs-restarting -r') }}"
+        cmd: "{{ reboot_detection_policy.cmd | default('needs-restarting -r') }}"
       register: result
       changed_when: result.rc == 1
       failed_when: result.rc > 1
