--- a/tasks/users.yml
+++ b/tasks/users.yml
@@ -1,25 +1,27 @@
 ---
 - name: ZSH
-  when: "'zsh' in system_users_shells"
+  when: "'zsh' in users_shells"
   ansible.builtin.import_tasks: zsh.yml
 
 - name: Users and groups management
   become: true
+  tags:
+    - users
   block:
     - name: Users - Parse data
       ansible.builtin.set_fact:
-        system_groups_present: |
+        groups_present: |
           {{
             (system_users_groups | selectattr('state', 'undefined'))
           + (system_users_groups | selectattr('state', 'defined') | selectattr('state', '!=', 'absent'))
           }}
-        system_groups_absent: |
+        groups_absent: |
           {{
             system_users_groups |
             selectattr('state', 'defined') |
             selectattr('state', '==', 'absent')
           }}
-        system_users_present: |
+        users_present: |
           {{
             (system_users | selectattr('state', 'undefined'))
           + (system_users | selectattr('state', 'defined') | selectattr('state', '==', 'present'))
@@ -27,64 +29,64 @@
 
     - name: Users - Groups to be present
       ansible.builtin.group:
-        name: "{{ system_group.name }}"
-        gid: "{{ system_group.gid | default(omit) }}"
-        local: "{{ system_group.local | default(omit) }}"
-        non_unique: "{{ system_group.non_unique | default(omit) }}"
-        state: "{{ system_group.state | default(omit) }}"
-        system: "{{ system_group.system | default(omit) }}"
-      loop: "{{ system_groups_present }}"
+        name: "{{ group.name }}"
+        gid: "{{ group.gid | default(omit) }}"
+        local: "{{ group.local | default(omit) }}"
+        non_unique: "{{ group.non_unique | default(omit) }}"
+        state: "{{ group.state | default(omit) }}"
+        system: "{{ group.system | default(omit) }}"
+      loop: "{{ groups_present }}"
       loop_control:
-        loop_var: system_group
+        loop_var: group
 
     - name: Users - Groups - Implicit
       ansible.builtin.group:
-        name: "{{ system_group }}"
+        name: "{{ group }}"
       loop: |
         {{ (
           [system_users_admin_group]
-        + (system_users_present | selectattr('group', 'defined') | map(attribute='group'))
-        + (system_users_present | selectattr('groups', 'defined') | map(attribute='groups'))
+        + (users_present | selectattr('group', 'defined') | map(attribute='group'))
+        + (users_present | selectattr('groups', 'defined') | map(attribute='groups'))
         ) | flatten | sort | unique }}
       loop_control:
-        loop_var: system_group
+        loop_var: group
 
     - name: Users
       ansible.builtin.user:
-        name: "{{ system_user.name }}"
-        append: "{{ system_user.append | default(omit) }}"
-        comment: "{{ system_user.comment | default(omit) }}"
-        create_home: "{{ system_user.create_home | default(omit) }}"
-        expires: "{{ system_user.expires | default(omit) }}"
-        force: "{{ system_user.force | default(omit) }}"
-        generate_ssh_key: "{{ system_user.generate_ssh_key | default(omit) }}"
-        group: "{{ system_user.group | default(omit) }}"
-        groups: "{{ system_user.groups | default(omit) }}"
-        home: "{{ system_user.home | default(omit) }}"
-        local: "{{ system_user.local | default(omit) }}"
-        move_home: "{{ system_user.move_home | default(omit) }}"
-        non_unique: "{{ system_user.non_unique | default(omit) }}"
-        password: "{{ system_user.password | default(omit) }}"
-        password_expire_max: "{{ system_user.password_expire_max | default(omit) }}"
-        password_expire_min: "{{ system_user.password_expire_min | default(omit) }}"
-        password_lock: "{{ system_user.password_lock | default(omit) }}"
-        remove: "{{ system_user.remove | default(omit) }}"
-        seuser: "{{ system_user.seuser | default(omit) }}"
-        shell: "{{ system_user.shell | default(omit) }}"
-        skeleton: "{{ system_user.skeleton | default(omit) }}"
-        ssh_key_bits: "{{ system_user.ssh_key_bits | default(omit) }}"
-        ssh_key_comment: "{{ system_user.ssh_key_comment | default(omit) }}"
-        ssh_key_file: "{{ system_user.ssh_key_file | default(omit) }}"
-        ssh_key_passphrase: "{{ system_user.ssh_key_passphrase | default(omit) }}"
-        ssh_key_type: "{{ system_user.ssh_key_type | default(omit) }}"
-        state: "{{ system_user.state | default(omit) }}"
-        system: "{{ system_user.system | default(omit) }}"
-        uid: "{{ system_user.uid | default(omit) }}"
-        umask: "{{ system_user.umask | default(omit) }}"
-        update_password: "{{ system_user.update_password | default(omit) }}"
+        name: "{{ user.name }}"
+        append: "{{ user.append | default(omit) }}"
+        comment: "{{ user.comment | default(omit) }}"
+        create_home: "{{ user.create_home | default(omit) }}"
+        expires: "{{ user.expires | default(omit) }}"
+        force: "{{ user.force | default(omit) }}"
+        generate_ssh_key: "{{ user.generate_ssh_key | default(omit) }}"
+        group: "{{ user.group | default(omit) }}"
+        groups: "{{ user.groups | default(omit) }}"
+        home: "{{ user.home | default(omit) }}"
+        local: "{{ user.local | default(omit) }}"
+        move_home: "{{ user.move_home | default(omit) }}"
+        non_unique: "{{ user.non_unique | default(omit) }}"
+        password: "{{ user.password | default(omit) }}"
+        password_expire_max: "{{ user.password_expire_max | default(omit) }}"
+        password_expire_min: "{{ user.password_expire_min | default(omit) }}"
+        password_lock: "{{ user.password_lock | default(omit) }}"
+        remove: "{{ user.remove | default(omit) }}"
+        seuser: "{{ user.seuser | default(omit) }}"
+        shell: "{{ user.shell | default(omit) }}"
+        skeleton: "{{ user.skeleton | default(omit) }}"
+        ssh_key_bits: "{{ user.ssh_key_bits | default(omit) }}"
+        ssh_key_comment: "{{ user.ssh_key_comment | default(omit) }}"
+        ssh_key_file: "{{ user.ssh_key_file | default(omit) }}"
+        ssh_key_passphrase: "{{ user.ssh_key_passphrase | default(omit) }}"
+        ssh_key_type: "{{ user.ssh_key_type | default(omit) }}"
+        state: "{{ user.state | default(omit) }}"
+        system: "{{ user.system | default(omit) }}"
+        uid: "{{ user.uid | default(omit) }}"
+        umask: "{{ user.umask | default(omit) }}"
+        update_password: "{{ user.update_password | default(omit) }}"
       loop: "{{ system_users }}"
       loop_control:
-        loop_var: system_user
+        loop_var: user
       no_log: true
 
     - name: Users - Keys
@@ -97,20 +99,28 @@
         manage_dir: "{{ key.manage_dir | default(omit) }}"
         path: "{{ key.path | default(omit) }}"
         state: "{{ key.state | default(omit) }}"
-        user: "{{ key.user }}"
+        user: "{{ user.name }}"
         validate_certs: "{{ key.validate_certs | default(omit) }}"
-      loop: "{{ system_users_keys }}"
-      loop_control:
-        loop_var: key
+      vars:
+        users: "{{ system_users | selectattr('authorized_keys', 'defined') }}"
+        user: "{{ item.0 }}"
+        key: "{{ item.1 }}"
+      with_subelements:
+        - |
+          {{
+            (users | selectattr('state', 'undefined'))
+          + (users | selectattr('state', 'defined') | selectattr('state', '==', 'present'))
+          }}
+        - authorized_keys
 
     - name: Users - Groups to be absent
       ansible.builtin.group:
-        name: "{{ system_group.name }}"
-        gid: "{{ system_group.gid | default(omit) }}"
-        local: "{{ system_group.local | default(omit) }}"
-        non_unique: "{{ system_group.non_unique | default(omit) }}"
+        name: "{{ group.name }}"
+        gid: "{{ group.gid | default(omit) }}"
+        local: "{{ group.local | default(omit) }}"
+        non_unique: "{{ group.non_unique | default(omit) }}"
         state: absent
-        system: "{{ system_group.system | default(omit) }}"
-      loop: "{{ system_groups_absent }}"
+        system: "{{ group.system | default(omit) }}"
+      loop: "{{ groups_absent }}"
       loop_control:
-        loop_var: system_group
+        loop_var: group
