--- a/vars/ubuntu-bionic.yml
+++ b/vars/ubuntu-bionic.yml
@@ -1,14 +1,20 @@
 ---
-system_packages:
-  bond: ifenslave
-  bridge: bridge-utils
-  ca_certificates: ca-certificates
-  chrony: chrony
+packages:
+  bond:
+    - ifenslave
+  bridge:
+    - bridge-utils
+  ca_certificates:
+    - ca-certificates
+  chrony:
+    - chrony
   common:
     - rsync
   desktop:
     - usbutils
-  ntp: ntp
-  vlan: vlan
+  ntp:
+    - ntp
+  vlan:
+    - vlan
 
-default_time_backend: chrony
+default_time_backend: timesync
