Fix unattended upgrade

--- a/tasks/hosts.yml
+++ b/tasks/hosts.yml
@@ -30,7 +30,7 @@
   block:
     - name: Hosts - Display hosts for debugging
       ansible.builtin.debug:
-        var: hosts
+        var: etc_hosts
         verbosity: 1
 
     - name: Hosts - Names in /etc/hosts
@@ -39,7 +39,7 @@
         path: /etc/hosts
         line: "{{ '{:<15}'.format(host.ip) }} {{ host.names | join(' ') }}"
         regexp: "^{{ host.ip | regex_escape }}"
-      loop: "{{ hosts }}"
+      loop: "{{ etc_hosts }}"
       loop_control:
         loop_var: host
       notify: restart hostname
