--- a/defaults/main/packages.yml
+++ b/defaults/main/packages.yml
@@ -5,4 +5,6 @@ system_packages_cache_age: 7
 system_packages: []
 
 system_archlinux_user_repository: "{{ system_profile != 'server' }}"
+system_el7_use_epel: false
+
 system_portage_directory: /var/db/repos/gentoo
