--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,4 +1,5 @@
 galaxy_info:
+  role_name: system
   author: Yoann Colin
   namespace: gwerlas
   description: Linux systems management
@@ -7,7 +8,7 @@ galaxy_info:
 
   license: BSD-3-Clause
 
-  min_ansible_version: "2.9"
+  min_ansible_version: "2.10"
 
   platforms:
     - name: ArchLinux
