--- a/defaults/main/networks.yml
+++ b/defaults/main/networks.yml
@@ -1,4 +1,5 @@
 ---
+system_networks_check_mode: files
 system_networks_restart_handler: reboot
 system_networks_interfaces: []
 system_networks_interfaces_prune: true
