--- a/tasks/package-managers/apt-pre.yml
+++ b/tasks/package-managers/apt-pre.yml
@@ -2,6 +2,12 @@
 - name: APT - Configuration files
   become: true
   block:
+    - name: Prevent APT lock acquired by the daily upgrade
+      become: true
+      ansible.builtin.systemd:
+        name: apt-daily-upgrade
+        state: stopped
+
     - name: APT - Sources list
       when: system_apt_mirrors is defined or system_apt_default_mirrors is defined
       ansible.builtin.template:
