Fix time synchronization

--- a/defaults/main/common.yml
+++ b/defaults/main/common.yml
@@ -4,7 +4,7 @@ system_manage_sudo: "{{ 'container' not in ansible_virtualization_tech_guest }}"
 system_manage_hosts: "{{ system_hosts | length > 0 }}"
 system_manage_proxies: "{{ system_http_proxy is defined or system_https_proxy is defined or system_ftp_proxy is defined }}"
 system_manage_networks: false
-system_manage_timesync: "{{ 'container' not in ansible_virtualization_tech_guest }}"
+system_manage_time: "{{ 'container' not in ansible_virtualization_tech_guest }}"
 
 # Shared variables
 system_bin_path: /usr/local/bin
