--- a/molecule/timesync/converge.yml
+++ b/molecule/timesync/converge.yml
@@ -6,7 +6,7 @@
       ansible.builtin.include_role:
         name: gwerlas.system
       vars:
-        system_manage_timesync: true
+        system_manage_time: true
         system_time_servers:
           - 0.fr.pool.ntp.org
           - 1.fr.pool.ntp.org
