--- a/tasks/package-managers/yum-pre.yml
+++ b/tasks/package-managers/yum-pre.yml
@@ -1,7 +1,7 @@
 ---
 - name: EPEL
   become: true
-  when: system_el7_use_epel
+  when: system_el_use_epel
   ansible.builtin.package:
     name: epel-release
     state: present
