--- a/tasks/hosts.yml
+++ b/tasks/hosts.yml
@@ -23,7 +23,7 @@
         regex: ^dns_domain_lo=
         create: true
         group: wheel
-        mode: 0664
+        mode: "0664"
 
 - name: /etc/hosts
   when: system_hosts | length > 0
