--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ molecule:
   services:
     - docker:20.10-dind
   script: molecule test
+  timeout: 2h
   rules:
     - if: $CI_COMMIT_BRANCH
       changes:
