--- a/tasks/ca.yml
+++ b/tasks/ca.yml
@@ -10,7 +10,7 @@
   ansible.builtin.copy:
     src: "{{ system_ca_certificate }}"
     dest: "{{ default_ca.path }}"
-    mode: 0644
+    mode: "0644"
   loop: "{{ system_ca_certificates }}"
   loop_control:
     loop_var: system_ca_certificate
