--- a/tasks/package-managers/apt-pre.yml
+++ b/tasks/package-managers/apt-pre.yml
@@ -13,7 +13,7 @@
       ansible.builtin.template:
         src: apt/sources.list.j2
         dest: /etc/apt/sources.list
-        mode: 0644
+        mode: "0644"
       notify: cache update
 
     - name: APT - Unattended upgrade
@@ -21,4 +21,4 @@
       ansible.builtin.template:
         src: apt/apt.conf.d/20auto-upgrades.j2
         dest: /etc/apt/apt.conf.d/20auto-upgrades
-        mode: 0644
+        mode: "0644"
