--- a/tasks/sudo.yml
+++ b/tasks/sudo.yml
@@ -29,7 +29,7 @@
   ansible.builtin.file:
     path: /etc/sudoers.d
     state: directory
-    mode: 0750
+    mode: "0750"
 
 - name: Sudo - Config files
   become: true
@@ -42,7 +42,7 @@
       ansible.builtin.template:
         src: sudoers.j2
         dest: /etc/sudoers
-        mode: 0440
+        mode: "0440"
         validate: visudo -cf %s
 
     - name: Sudo - Proxies
@@ -52,5 +52,5 @@
       ansible.builtin.template:
         src: sudoers.d/50-proxy.j2
         dest: /etc/sudoers.d/50-proxy
-        mode: 0440
+        mode: "0440"
         validate: visudo -cf %s
