--- a/tasks/time.yml
+++ b/tasks/time.yml
@@ -33,7 +33,7 @@
           ansible.builtin.template:
             src: "{{ time_backend.config }}.j2"
             dest: "/etc/{{ time_backend.config }}"
-            mode: 0644
+            mode: "0644"
           notify: restart time service
 
         - name: Time - Service
