--- a/tasks/zsh.yml
+++ b/tasks/zsh.yml
@@ -4,7 +4,7 @@
   ansible.builtin.file:
     path: "/etc/skel/.zsh"
     state: directory
-    mode: 0700
+    mode: "0700"
 
 - name: Zsh - Skeletons raw files
   when:
@@ -13,7 +13,7 @@
   ansible.builtin.copy:
     dest: "/etc/skel/{{ system_zsh_skel_file }}"
     src: "{{ system_zsh_skel_file }}"
-    mode: 0600
+    mode: "0600"
   loop: "{{ system_zsh_files }}"
   loop_control:
     loop_var: system_zsh_skel_file
@@ -25,7 +25,7 @@
   ansible.builtin.template:
     dest: "/etc/skel/{{ system_zsh_skel_template }}"
     src: "{{ system_zsh_skel_template }}.j2"
-    mode: 0600
+    mode: "0600"
   loop: "{{ system_zsh_templates }}"
   loop_control:
     loop_var: system_zsh_skel_template
