--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ molecule:
   image: gwerlas/molecule
   services:
     - docker:20.10-dind
-  script: molecule test
+  script: molecule test -s docker
   timeout: 2h
   rules:
     - if: $CI_COMMIT_BRANCH
