--- a/molecule/docker/verify.yml
+++ b/molecule/docker/verify.yml
@@ -1,1 +1,16 @@
-../default/verify.yml
+---
+- name: Verify role with the server profile (default)
+  hosts: all
+  gather_facts: false
+  tasks:
+    - name: Rsync
+      ansible.posix.synchronize:
+        src: verify.yml
+        dest: /tmp/verify.yml
+
+    - name: ZSH
+      ansible.builtin.command:
+        cmd: zsh --version
+      changed_when: false
+      register: result
+      failed_when: result.rc == 0
