--- a/meta/argument_specs.yml
+++ b/meta/argument_specs.yml
@@ -86,6 +86,7 @@ argument_specs:
         default: server
         description: Type of the node
         choices:
+          - desktop
           - server
 
   proxies:
