--- a/tasks/ca.yml
+++ b/tasks/ca.yml
@@ -1,7 +1,7 @@
 ---
 - name: CA - Load variables
   when: default_ca is undefined
-  ansible.builtin.import_tasks: vars.yml
+  ansible.builtin.import_tasks: "{{ role_path }}/tasks/vars.yml"
 
 - name: CA certificates
   tags:
