--- a/tasks/networks.yml
+++ b/tasks/networks.yml
@@ -1,11 +1,11 @@
 ---
 - name: Networks - Load variables
   when: default_networks is undefined
-  ansible.builtin.import_tasks: vars.yml
+  ansible.builtin.import_tasks: "{{ role_path }}/tasks/vars.yml"
 
 - name: Networks - Prune unmanaged interfaces
   when: system_networks_interfaces_prune
-  ansible.builtin.import_tasks: networks/prune.yml
+  ansible.builtin.import_tasks: "{{ role_path }}/tasks/networks/prune.yml"
 
 - name: Networks - Distribution rules
   ansible.builtin.include_tasks:
@@ -15,8 +15,8 @@
         - "{{ ansible_os_family | lower }}-like.yml"
         - empty.yml
       paths:
-        - networks
+        - "{{ role_path }}/tasks/networks"
 
 - name: Networks - Interfaces configuration from template
   when: default_networks.template is defined
-  ansible.builtin.import_tasks: networks/from-template.yml
+  ansible.builtin.import_tasks: "{{ role_path }}/tasks/networks/from-template.yml"
