--- a/tasks/package-managers/portage-pre.yml
+++ b/tasks/package-managers/portage-pre.yml
@@ -56,7 +56,7 @@
               changed_when: true
 
             - name: Portage - Cache - Portdir - Profile symlink repair
-              ansible.builtin.import_tasks: portage-profile.yml
+              ansible.builtin.import_tasks: "{{ role_path }}/tasks/package-managers/portage-profile.yml"
 
 - name: Portage - Configuration directories
   become: true
